# LangSteer

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SETUP.md  SLURM_TRAINING.md  TRAINING_GUIDE.md  action_primitive_annotations.json  action_primitive_object_annotations.json  calvin_language_annotations.json  main.py  perturbed_language_annotations.json  pyproject.toml  test_forecasters.py
conf/: config.yaml
conf/env/: calvin.yaml  isaac_sim.yaml
conf/evaluation/: baseline.yaml  langsteer.yaml  langsteer_nolang_abcd.yaml  vls.yaml
conf/experiment/: diffuser_actor_eval.yaml  dp3_calvin_inference.yaml
conf/policy/: diffuser_actor.yaml  diffuser_actor_maskedlang.yaml  diffuser_actor_nolang.yaml  diffuser_actor_nolang_abcd.yaml  diffuser_actor_primitive.yaml  dp3.yaml
conf/rollout/: default.yaml
conf/steering/: none.yaml  tweedie.yaml  tweedie_da.yaml  voxposer.yaml
conf/training/: diffuser_actor_calvin.yaml  diffuser_actor_calvin_nolang.yaml  diffuser_actor_nolang.yaml  diffuser_actor_primitive.yaml  dp3_bimodal.yaml  (+3 more)
core/: __init__.py  env.py  policy.py  steering.py  types.py
docs/: README.md
envs/: __init__.py  calvin.py  isaac_sim.py  rlbench.py  vls_calvin_adapter.py
forecasters/: __init__.py  base_forecaster.py  trajectory_forecaster.py  tweedie_forecaster.py
policies/: __init__.py  diffuser_actor.py  dp3.py
scripts/: calibrate_voxposer_objects.py  compare_results.py  convert_calvin_debug.sh  convert_calvin_for_diffuser_actor.py  convert_calvin_to_zarr.py  preprocess_primitive_annotations.py  preprocess_primitive_object_annotations.py  run_evaluation.py  run_experiment.py  run_vls_evaluation.py  setup_calvin.sh  slurm_train_dp3.sh  teleop_isaac_sim.py  test_voxposer.py  train_diffuser_actor.py  train_dp3.py  visualize.py
steering/: __init__.py  dynaguide.py  tweedie.py  voxposer_steering.py
training/: __init__.py  calvin_dataset.py  dp3_trainer.py  sampler.py  train_forecaster.py
utils/: __init__.py  collections_compat.py  normalizer.py  pointnet_encoder.py  pytorch3d_transforms.py  reference_trajectory_loader.py  utils_with_calvin.py  visualize_point_clouds.py  visualize_steering.py
visualization/: __init__.py  config.py  manager.py
voxposer/: __init__.py  calvin_interface.py  llm_cache.py  lmp.py  utils.py  value_map.py  visualizer.py
(+85 files in other folders)
