[project]
name = "langsteer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.2.6",
    "torch>=2.10.0",
    "calvin-env @ git+https://github.com/mees/calvin_env.git",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
calvin = [
    "calvin-env @ git+https://github.com/mees/calvin_env.git",
]
diffusion = [
    "diffusers>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["core*", "envs*", "policies*", "steering*", "scripts*"]
exclude = ["calvin*", "3D-Diffusion-Policy*", "conf*", "training*"]
