[project]
name = "langsteer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.2.6",
    "torch>=2.10.0",
    "calvin-env @ git+https://github.com/mees/calvin_env.git",
    "diffusers>=0.36.0",
    "transformers>=5.2.0",
    "accelerate>=1.12.0",
    "huggingface-hub>=1.4.1",
    "plotly>=6.5.2",
    "pyrender>=0.1.45",
    "trimesh>=4.11.2",
    "zarr>=2.18.3",
    "rich>=14.3.2",
    "typer>=0.23.0",
    "pyopengl",
    "dill>=0.3.8",
    "einops>=0.7.0",
    "termcolor>=2.4.0",
    "numcodecs>=0.12.0",
    "scipy>=1.12.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
calvin = [
    "calvin-env @ git+https://github.com/mees/calvin_env.git",
]
diffusion = [
    "diffusers>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["core*", "envs*", "policies*", "steering*", "scripts*"]
exclude = ["calvin*", "3D-Diffusion-Policy*", "conf*", "training*"]

[tool.uv.sources]
pyopengl = { git = "https://github.com/mmatl/pyopengl.git", rev = "76d1261adee2d3fd99b418e75b0416bb7d2865e6" }
